<resources>
    <string name="app_name">PathFinder</string>
    <!--<string name="google_app_id">973948562269-1o9iddi19gh4b09mpkja33r1jl0odic9.apps.googleusercontent.com</string>-->
    <string name="find_path_button">Find</string>
    <string name="home_activity_content">PathFinder</string>
    <string name="destination_place_hint_message">  Destination  </string>
    <string name="start_place_hint_message">  Starting point  </string>
    <string name="title_activity_maps_path_finder">Map</string>
    <string name="current_place">My Place</string>
    <string name="title_activity_path_finder">PathFinder</string>

    <string name="title_section1">Shortest route</string>
    <string name="title_section2">Cheapest route</string>
    <string name="title_section3">Find bus stop</string>
    <string name="title_section4">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="get_curr_location">My location</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Path options -->
    <string-array name="path_options">
        <item>Cheapest</item>
        <item>Shortest</item>
    </string-array>

    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
