<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc" tools:context=".HomeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/home_activity_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fitsSystemWindows="true">
            <EditText android:id="@+id/start_place_textbox"
                style="@android:style/Widget.Holo.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:background="@color/wallet_bright_foreground_holo_dark"
                android:hint="@string/start_place_hint_message"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#ff0a1c25"
                android:textSize="30sp" />

            <EditText android:id="@+id/destination_place_textBox"
                style="@android:style/Widget.Holo.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/start_place_textbox"
                android:layout_alignStart="@+id/start_place_textbox"
                android:layout_below="@+id/start_place_textbox"
                android:layout_marginTop="31dp"
                android:background="@color/wallet_bright_foreground_holo_dark"
                android:hint="@string/destination_place_hint_message"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#ff0a1c25"
                android:textSize="30sp" />

            <RadioButton
                android:id="@+id/getMyPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="127dp"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/current_place"
                android:textColor="#ffffffff" />


        </RelativeLayout>


        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">
            <Button android:id="@+id/find_button" style="?metaButtonBarButtonStyle"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ff1e4f6d"
                android:clickable="true"
                android:onClick="showPath"
                android:text="@string/find_path_button"
                android:textSize="40sp"
                android:textStyle="normal|bold" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
